# SMLT

./: .gitignore  CMakeLists.txt  README.md
cmake/: SMLTConfig.cmake.in
include/smlt/: bayesianOptimization.hpp  gaussianProcess.hpp  kernelFunction.hpp  nonlinearSolver.hpp  smltUtilities.hpp  squaredExponential.hpp
pkg-config/: CMakeLists.txt
python/: plotBayesianOptimization.py  plotGaussianProcess.py  plotKernelOutput.py  tauFunction.py
src/: bayesianOptimization.cpp  gaussianProcess.cpp  kernelFunction.cpp  nonlinearSolver.cpp  smltUtilities.cpp  squaredExponential.cpp
tests/: CMakeLists.txt  bayesianOptimizationTests.cpp  gaussianProcessTests.cpp  kernelTests.cpp  smltUtilitiesTests.cpp
